test/errors/incompatibleRangeBounds.chpl
var x: int = 1;
var y = "hello";
var r1 = 1.."hello";
var r2 = y..x;
